# passlock

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: install.sh
src/: cli.rs  config.rs  entry.rs  error.rs  lib.rs  main.rs
